fixed create product fixe=ing categories and subcategorires
